--- a/leadnews-test/pom.xml
+++ b/leadnews-test/pom.xml
@@ -7,6 +7,10 @@
         <groupId>com.li</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <packaging>pom</packaging>
+    <modules>
+        <module>freemarker-demo</module>
+    </modules>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>leadnews-test</artifactId>
