feat:自媒体素材管理-素材图片上传

--- a/leadnews-gateway/leadnews-wemedia-gateway/pom.xml
+++ b/leadnews-gateway/leadnews-wemedia-gateway/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>leadnews-wemedia</artifactId>
+    <artifactId>leadnews-wemedia-gateway</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
