--- a/leadnews-service/leadnews-wemedia/pom.xml
+++ b/leadnews-service/leadnews-wemedia/pom.xml
@@ -14,4 +14,12 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.li</groupId>
+            <artifactId>file-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
